--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,20 @@
-venv/
+# Environment
 .env
+venv/
+.venv/
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+
+# OS files
+Thumbs.db
+.DS_Store
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
